# url-shortener

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
assets/: architecture.drawio  ~$architecture.drawio.bkp
scripts/: make-deps.sh
services/shortener/: app.py
src/: app.py  requirements.txt
