[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["walmsles <2704782+walmsles@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.25.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
