[tool.poetry]
name = "aws-sam-template-python"
version = "1.0.0"
description = "Sample AWS Project Template for python with a simple, consistent layout and linting/formatting tools built-in"
authors = ["walmsles <2704782+walmsles@users.noreply.github.com>"]
license = "MIT-0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-lambda-powertools = {extras = ["tracer"], version = "^2.21.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
boto3 = "^1.26.160"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
